<resources>
    <string name="app_name">Movie Tinder</string>

    /** Image content descriptions */
    <string name="description_poster">Movie poster</string>
    <string name="description_like">Like/Dislike</string>
    <string name="description_delete">Delete</string>
    <string name="description_name">Change device name</string>
    <string name="description_progressbar">Progress indicator</string>
    <string name="description_no_history">Empty folder</string>
    <string name="description_not_connected">3 person silhouettes with an "X" over them</string>
    <string name="description_no_matches">Sad face emoticon</string>

    /** App top bar menu */
    <string name="action_title_connect">Connect</string>
    <string name="action_title_liked">Liked</string>
    <string name="action_title_disliked">Disliked</string>
    <string name="action_title_clear">Clear</string>
    <string name="action_title_refresh">Refresh</string>
    <string name="action_title_filter">Filter</string>
    <string name="action_title_settings">Settings</string>

    /** App bottom navigation bar */
    <string name="bottom_navigation_title_connect">Connect</string>
    <string name="bottom_navigation_title_matches">Matches</string>
    <string name="bottom_navigation_title_history">History</string>

    /** Device name */
    <string name="default_device_name">MovieBuff</string>
    <string name="dialog_device_name_title">Name your device:</string>

    /** Preferences */
    <string name="preferences_device_name_key">device_name</string>
    <string name="preferences_movie_count_key">movie_count</string>
    <string name="preferences_default_movie_count">5</string>
    <string name="preferences_movie_count_title">Movie selection</string>
    <string name="preferences_device_name_title">Your device name</string>
    <string name="preferences_movie_count_summary">Number of movies to choose from</string>

    /** Dialog box requesting failed permissions */
    <string name="dialog_permissions_title">Permissions required</string>
    <string name="dialog_permissions_message">This app requires <b>Nearby Devices</b> and
        <b>Location</b> permissions to be able to find and communicate with nearby devices. It also uses <b>Notification</b> permission to display connected device information. Please
        open this app\'s <b>Settings</b> to enable the necessary permissions.</string>
    <string name="dialog_permissions_button_settings">Settings</string>

    /** Dialog box for filtering movies in HistoryFragment */
    <string name="dialog_filter_title">Display movies:</string>
    <string-array name="dialog_filter_choices">
        <item>All</item>
        <item>Liked</item>
        <item>Disliked</item>
    </string-array>

    /** Dialog box for clearing movies in HistoryFragment */
    <string name="dialog_erase_history">Are you sure you wanted to erase all the movies listed below from history? This cannot be undone.</string>
    <string name="dialog_erase_history_yes">Delete</string>

    /** Dialog box general */
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_confirm_delete">Confirm delete</string>

    /** Toast messages */
    <string name="toast_connected_endpoint">%1$s connected</string>
    <string name="toast_disconnected_endpoint">%1$s disconnected</string>
    <string name="toast_selection_received">%1$s has chosen</string>
    <string name="toast_device_name_limitations">Name must not be longer than 12 characters, and one line only</string>
    <string name="toast_connection_rejected">Connection rejected</string>
    <string name="toast_already_connected">Already connected to this device</string>
    <string name="toast_connection_error">Unknown connection error</string>
    <string name="toast_failed_connecting">Failed to connect</string>

    /** Progressbar titles */
    <string name="progressbar_searching">Searching</string>
    <string name="progressbar_connecting">Connecting</string>
    <string name="progressbar_waiting">Waiting for friend</string>

    /** User displayed informational messages */
    <string name="info_no_history">No records found</string>
    <string name="info_not_connected">Not currently connected</string>
    <string name="info_no_matches">No movies matched</string>

    /** User displayed error messages */
    <string name="error_insufficient_permissions">Unable to scan for nearby devices\n\nPlease allow the
        necessary permissions in the app Settings</string>
    <string name="error_insufficient_permissions_devicename">MissingPermissionsName</string>
    <string name="error_bluetooth_not_found">ERROR - Bluetooth Not Found!</string>

    /** Action Bar Titles */
    <string name="action_bar_title_connect">Devices nearby</string>
    <string name="action_bar_title_has_matches">%1$s matches</string>
    <string name="action_bar_title_no_matches">Matched movies</string>
    <string name="action_bar_title_history">Previously encountered</string>
    <string name="action_bar_title_settings">Settings</string>

    /** Notification setup */
    <string name="notification_name">Connections</string>
    <string name="notification_description">Shows active devices</string>
    <string name="notification_button_disconnect">DISCONNECT</string>
</resources>